Hide Guest and Event Attendee from Signin view.

--- a/templates/main.html
+++ b/templates/main.html
@@ -189,8 +189,8 @@
     <a style="color:green; font-size:9px" href="#" onclick="$('#privacy').fadeIn();">E-mail Privacy</a>
     <br>
     <input type="button" value="Member" onclick="go('Member')" />
-    <input type="button" value="Guest" onclick="go('Guest')" />
-    <input type="button" value="Event Attendee" onclick="go('Event')" />
+    <!-- <input type="button" value="Guest" onclick="go('Guest')" /> -->
+    <!-- <input type="button" value="Event Attendee" onclick="go('Event')" /> -->
   {% endif %}
   <input id="ttt" type="hidden" name="type" value="" />
   </form>
